--- a/Css/styles.css
+++ b/Css/styles.css
@@ -8,6 +8,12 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-color: black;
+  background-size: auto 100vh;
+}
+@media (orientation: landscape) {
+  body {
+    background-size: 100vw auto;
+  }
 }
 
 /*logg inn screen*/
