--- a/Css/stylesover.css
+++ b/Css/stylesover.css
@@ -1,7 +1,20 @@
 body {
   background-color: black;
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 97vh;
+  overflow: hidden;
 }
 h1 {
   color: red;
+}
+button {
+  width: 200px;
+  height: 50px;
+  background-color: rgba(0, 0, 0, 1);
+  color: red;
+  border: 2px solid rgb(228, 226, 226);
 }
