--- a/Css/stylesover.css
+++ b/Css/stylesover.css
@@ -10,11 +10,19 @@ body {
 }
 h1 {
   color: red;
+  font-size: 59px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 button {
   width: 200px;
   height: 50px;
-  background-color: rgba(0, 0, 0, 1);
-  color: red;
+  background-color: rgb(20, 20, 20);
+  color: rgb(244, 242, 242);
+  border: 2px solid rgb(228, 226, 226);
+}
+button:hover {
+
+  background-color: rgb(51, 51, 51);
+  color: rgb(204, 202, 202);
   border: 2px solid rgb(228, 226, 226);
 }
